--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,6 +11,7 @@ hooks-directory = ${buildout:directory}/hooks
 [part]
 recipe = minitage.recipe.cmmi
 url =   http://cairographics.org/releases/cairo-1.8.8.tar.gz
-configure-options =--enable-xlib-xrender=no --enable-xlib=no
+configure-options =--enable-xlib-xrender=no --enable-xlib=no --enable-win32=no
+
 md5sum=d3e1a1035ae563812d4dd44a74fb0dd0
 
