--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,6 +12,7 @@ hooks-directory = ${buildout:directory}/hooks
 recipe = minitage.recipe.cmmi
 url =   http://cairographics.org/releases/cairo-1.8.8.tar.gz
 configure-options =--enable-xlib-xrender=no --enable-xlib=no --enable-win32=no
-
 md5sum=d3e1a1035ae563812d4dd44a74fb0dd0
-
+#pre-configure-hook=${buildout:directory}/h.py:h
+patch-options=-Np1
+patches-cygwin=${buildout:directory}/cygwin.patch
